0.12.x/docs/concepts.md
# Concepts

## Architecture 

Lakekeeper is an implementation of the Apache Iceberg REST Catalog API.  Lakekeeper depends on the following, partially optional, external dependencies:

<figure markdown="span">
  ![Lakekeeper Overview](../../assets/interfaces-v2.svg){ width="100%" }
  <figcaption>Connected systems. Green boxes are recommended for production.</figcaption>
</figure>

* **Persistence Backend / Catalog** (required): We currently support only Postgres, but plan to expand our support to more Databases in the future.
* **Warehouse Storage** (required): When a new Warehouse is created, storage credentials are required.
* **Identity Provider** (optional): Lakekeeper can authenticate incoming requests using any OIDC capable Identity Provider (IdP). Lakekeeper can also natively authenticate kubernetes service accounts.
* **Authorization System** (optional): For permission management, Lakekeeper supports different Authorizers. Please refer to the [Authorization Documentation](./authorization.md) for more information.
* **Secret Store** (required): Lakekeeper requires a Secret Store to stores secrets such as Warehouse credentials. By default, Lakekeeper uses the default Postgres connection to store encrypted secrets. To increase security, Lakekeeper can also use external systems to store secrets. Currently all Hashicorp-Vault like stores are supported.
* **Event Store** (optional): Lakekeeper can send Change Events to an Event Store. We support [NATS](http://nats.io) and [Apache Kafka](http://kafka.apache.org)
* **Data Contract System** (optional): Lakekeeper can interface with external data contract systems to prohibit breaking changes to your tables.

To get started quickly with the latest version of Lakekeeper check our [Getting Started Guide](../../getting-started.md).


## Identifier Case Sensitivity
All entity names in Lakekeeper — including Projects, Warehouses, Namespaces, Tables, Views, and Roles — are **case-insensitive but case-preserving**:

- **Case-insensitive matching**: Looking up `my_table`, `My_Table`, or `MY_TABLE` all resolve to the same entity. This applies to all operations: reads, writes, renames, drops, and listing.
- **Case-preserving storage**: The name you provide at creation time is stored exactly as given. Lakekeeper does not normalize names to lowercase.
- **No case-only duplicates**: You cannot create two entities whose names differ only in case within the same scope. For example, creating namespace `Analytics` and then `analytics` in the same warehouse will fail with a conflict error.
- **Requested case in responses**: API responses return entity names using the case from the *request*, not the case stored in the database. For example, if a table was created as `my_table` and you query for `MY_TABLE`, the response will contain `MY_TABLE`.

This behavior is implemented via PostgreSQL's ICU collation (`und-u-ks-level2`) on all identifier columns and is transparent to all query engines — no client-side configuration is needed.

### Why this design?

Query engines disagree on identifier case — and they disagree in the worst possible way. Some fold to lowercase, one folds to **uppercase**, and some preserve case exactly. Without a case-insensitive catalog, a table created by one engine can become invisible to another:

| Engine | Unquoted identifiers | Quoted identifiers | Sent to catalog |
|--------|---------------------|--------------------|-----------------|
| Spark | Lowercased | Backticks preserve case | Lowercase |
| Trino / Starburst | Lowercased | `"..."` preserves case | Lowercase (unquoted), preserved (quoted) |
| DuckDB | Lowercased | `"..."` preserves case | Lowercase (unquoted), preserved (quoted) |
| StarRocks | Lowercased | Generally lowercased | Lowercase |
| RisingWave | Lowercased | `"..."` preserves case | Lowercase (unquoted), preserved (quoted) |
| Athena (Spark) | **Always lowercased** | **Quoted still lowercased** | **Always lowercase** |
| Snowflake | **Uppercased** | `"..."` preserves case | **Uppercase** (unquoted), preserved (quoted) |
| PyIceberg | N/A (programmatic) | N/A | **Exactly as provided** |

Notice the conflict: Spark sends `monthly_revenue`, Snowflake sends `MONTHLY_REVENUE`, and PyIceberg sends whatever the user typed. With a case-sensitive catalog, **the same table has three different names depending on which engine created it** — and none of them can find each other's tables.

Consider this real-world scenario with a case-sensitive catalog:

1. A data engineer creates a table via PyIceberg: `catalog.create_table("Reporting.Monthly Revenue", schema)` — stored as `Monthly Revenue`.
2. An analyst in Spark runs `SELECT * FROM reporting.monthly_revenue` — Spark sends `monthly_revenue`. **:x: Table not found.**
3. A BI team queries from Snowflake: `SELECT * FROM reporting.monthly_revenue` — Snowflake sends `MONTHLY_REVENUE`. **:x: Table not found.**
4. Even the original engineer, switching to Trino, tries `SELECT * FROM reporting."Monthly Revenue"` — Trino lowercases the unquoted parts. **:x: Table not found** (unless quoted exactly right).

The table exists. It has data. Yet three out of four engines cannot see it. The only way to access it is to know the exact case used at creation time and quote it precisely — fragile and error-prone.

**With Lakekeeper, all four queries find the table instantly.** No quoting tricks, no configuration, no coordination between teams about naming conventions.

#### Why not just lowercase everything?

An alternative approach is to normalize all identifiers to lowercase on the catalog side. This solves interoperability but destroys information. If a data team carefully names their gold layer tables `Monthly Revenue`, `Customer Events`, or `Order Line Items`, a normalizing catalog turns them all into `monthly revenue`, `customer events`, and `order line items`. The intent behind the original naming is lost.

This matters most for **UI and management tools**. Dashboards, the Lakekeeper UI, data catalogs, and lineage tools all display table names to humans. `Monthly Revenue` is immediately readable; `monthly revenue` is slightly worse; and once you have hundreds of tables, the difference between well-cased names and a wall of lowercase text adds up. By preserving the original case, Lakekeeper lets teams maintain meaningful, readable names while every query engine can still access them with whatever case it uses internally. You get proper casing for humans and seamless access for machines — without compromise.

| Scenario | Lakekeeper | Case-sensitive catalog |
|----------|:----------:|:----------------------:|
| Spark reads table created by PyIceberg | :white_check_mark: | :x: |
| Snowflake reads table created by Spark | :white_check_mark: | :x: |
| Spark reads table created by Snowflake | :white_check_mark: | :x: |
| Trino reads table created by Spark | :white_check_mark: | :white_check_mark: |
| PyIceberg reads table created by Spark | :white_check_mark: | :white_check_mark: (1) |
| Trino with quoted `"MyTable"` finds Spark's `mytable` | :white_check_mark: | :x: |
| Athena reads table created by any engine | :white_check_mark: | :x: (2) |
| UI shows `Monthly Revenue` + all engines can query it | :white_check_mark: | :x: |

(1) Only if PyIceberg uses the exact same case that the creating engine sent (typically lowercase).
(2) Athena always lowercases identifiers, including quoted ones. Tables created with mixed case via PyIceberg or quoted identifiers in Trino are unreachable from Athena in a case-sensitive catalog.

## Entity Hierarchy

In addition to entities defined in the Apache Iceberg specification or the REST specification (Namespaces, Tables, etc.), Lakekeeper introduces new entities for permission management and multi-tenant setups. The following entities are available in Lakekeeper:

<br>
<figure markdown="span">
  ![Lakekeeper Entity Hierarchy](../../assets/entity-hierarchy-v1.svg){ width="100%" }
  <figcaption>Lakekeeper Entity Hierarchy</figcaption>
</figure>
<br>

Project, Server, User and Roles are entities unknown to the Iceberg Rest Specification. Lakekeeper serves two APIs:

1. The Iceberg REST API is served at endpoints prefixed with `/catalog`. External query engines connect to this API to interact with the Lakekeeper. Lakekeeper also implements the S3 remote signing API which is hosted at `/<warehouse-id>/v1/aws/s3/sign`.
1. The Lakekeeper Management API is served at endpoints prefixed with `/management`. It is used to configure Lakekeeper and manage entities that are not part of the Iceberg REST Catalog specification, such as permissions.

### Server
The Server is the highest entity in Lakekeeper, representing a single instance or a cluster of Lakekeeper pods sharing a common state. Each server has a unique identifier (UUID). The Server ID is generated randomly on first startup and stored in the Database Backend.

### Project
For single-company setups, we recommend using a single Project setup, which is the default. Unless `LAKEKEEPER__ENABLE_DEFAULT_PROJECT` is explicitly set to `false`, a default project is created during [bootstrapping](./bootstrap.md) with the nil UUID.

### Warehouse
Each Project can contain multiple Warehouses. Query engines connect to Lakekeeper by specifying a Warehouse name in the connection configuration.

Each Warehouse is associated with a unique location on object stores. Never share locations between Warehouses to ensure no data is leaked via vended credentials. Each Warehouse stores information on how to connect to its location via a `storage-profile` and an optional `storage-credential`.

Warehouses can be configured to use [Soft-Deletes](./concepts.md#soft-deletion). When enabled, tables are not eagerly deleted but kept in a deleted state for a configurable amount of time. During this time, they can be restored. Please note that Warehouses and Namespaces cannot be deleted via the `/catalog` API if child objects are present. This includes soft-deleted Tables. A cascade-drop API is added in one of the next releases as part of the `/management` API.

### Namespaces
Each Warehouses can contain multiple Namespaces. Namespaces can be nested and serve as containers for Namespaces, Tables and Views. Using the `/catalog` API, a Namespace cannot be dropped unless it is empty. A cascade-drop API is added in one of the next releases as part of the `/management` API.

### Tables & Views
Each Namespace can contain multiple Tables and Views. When creating new Tables and Views, we recommend to not specify the `location` explicitly. If locations are specified explicitly, the location must be a valid sub location of the `storage-profile` of the Warehouse - this is validated by Lakekeeper upon creation. Lakekeeper also ensures that there are no Tables or Views that use a parent- or sub-folder as their `location` and that the location is empty on creation. These checks are required to ensure that no data is leaked via vended-credentials.


### Users
Lakekeeper is no Identity Provider. The identities of users are exclusively managed via an external Identity Provider to ensure compliance with basic security standards. Lakekeeper does not store any Password / Certificates / API Keys or any other secret that grants access to data for users. Instead, we only store Name, Email and type of users with the sole purpose of providing a convenient search while assigning privileges.

Users can be provisioned to Lakekeeper by either of the following endpoints:

* Explicit user creation via the POST `/management/user` endpoint. This endpoint is called automatically by the UI upon login. Thus, users are "searchable" after their first login to the UI.
* Implicit on-the-fly creation when calling GET `/catalog/v1/config`. This can be used to register technical users simply by connecting to the Lakekeeper with your favorite tool (i.e. Spark). The initial connection will probably fail because privileges are missing to use this endpoint, but the user is provisioned anyway so that privileges can be assigned before re-connecting.


### Roles
Projects can contain multiple Roles, allowing Roles to be reused in all Warehouses within the Project. Roles can be nested arbitrarily, meaning that a role can contain other roles within it. Roles can be provisioned automatically using the `/management/v1/role` endpoint or manually created via the UI. We are looking into SCIM support to simplify role provisioning. Please consider upvoting the corresponding [GitHub Issue](https://github.com/lakekeeper/lakekeeper/issues/497) if this would be of interest to you.

## Dropping Tables
Currently all tables stored in Lakekeeper are assumed to be managed by Lakekeeper. The concept of "external" tables will follow in a later release. When managed tables are dropped, Lakekeeper defaults to setting `purgeRequested` parameter of the `dropTable` endpoint to true unless explicitly set to false. Currently most query engines do not set this flag, which defaults to enabling purge. If purge is enabled for a drop, all files of the table are removed.

## Soft Deletion
Lakekeeper allows warehouses to enable soft deletion as a data protection mechanism. When enabled:

- Tables and views aren't immediately removed from the catalog when dropped
- Instead, they're marked as deleted and scheduled for cleanup
- The data remains recoverable until the configured expiration period elapses
- Recovery is only possible for warehouses with soft deletion enabled
- The expiration delay is fixed at the time of dropping - changing warehouse settings only affects newly dropped tables

Soft deletion works correctly only when clients follow these behaviors:

1. `DROP TABLE xyz` (standard): Clients should not remove any files themselves, and should call the `dropTable` endpoint without the `purgeRequested` flag. Lakekeeper handles file removal for managed tables. This works well with all query engines.

2. `DROP TABLE xyz PURGE`: Clients should not delete files themselves, and should call the `dropTable` endpoint with the `purgeRequested` flag set to true. Lakekeeper will remove files for managed tables (and for unmanaged tables in a future release). Unfortunately not all query engines adhere to this behavior, as described below.

Unfortunately, some Java-based query engines like Spark don't follow the expected behavior for `PURGE` operations. Instead, they immediately delete files, which undermines soft deletion functionality. The Apache Iceberg community has [agreed to fix this in Iceberg 2.0](https://github.com/apache/iceberg/pull/11317#issuecomment-2604912801). For Iceberg 1.x versions, we're working on a new `io.client-side.purge-enabled` flag for better control.

!!! warning
    Never use **`DROP TABLE xyz PURGE`** with clients like Spark that immediately remove files when soft deletion is enabled!

For S3-based storage, Lakekeeper provides a protective configuration option in storage profiles: `push-s3-delete-disabled`. When set to `true`, this:

- Prevents clients from deleting files by pushing the `s3.delete-enabled: false` setting to clients
- Preserves soft deletion functionality even when `PURGE` is specified
- Affects all file deletion operations, including maintenance procedures like `expire_snapshots`

When running table maintenance procedures that need to remove files with `push-s3-delete-disabled: true`, you must explicitly override with `s3.delete-enabled: true` in your client configuration:

```python
import pyspark
import pyspark.sql

pyspark_version = pyspark.__version__
pyspark_version = ".".join(pyspark_version.split(".")[:2]) # Strip patch version
iceberg_version = "1.8.1"

# Disable the jars which are not needed
spark_jars_packages = (
    f"org.apache.iceberg:iceberg-spark-runtime-{pyspark_version}_2.12:{iceberg_version},"
    f"org.apache.iceberg:iceberg-aws-bundle:{iceberg_version},"
)

catalog_name = "lakekeeper"
configuration = {
    "spark.jars.packages": spark_jars_packages,
    "spark.sql.extensions": "org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions",
    "spark.sql.defaultCatalog": catalog_name,
    f"spark.sql.catalog.{catalog_name}": "org.apache.iceberg.spark.SparkCatalog",
    f"spark.sql.catalog.{catalog_name}.catalog-impl": "org.apache.iceberg.rest.RESTCatalog",
    f"spark.sql.catalog.{catalog_name}.uri": "<Lakekeeper Catalog URI, i.e. http://localhost:8181/catalog>",
    # ... Additional configuration options
    # THE FOLLOWING IS THE NEW OPTION:
    # Enabling s3 deletion explicitly - this overrides any Lakekeeper setting
    f"spark.sql.catalog.{catalog_name}.s3.delete-enabled": "true",
}

spark_conf = pyspark.SparkConf().setMaster("local[*]")

for k, v in configuration.items():
    spark_conf = spark_conf.set(k, v)

spark = pyspark.sql.SparkSession.builder.config(conf=spark_conf).getOrCreate()
spark.sql(f"USE {catalog_name}")
```


## Protection and Deletion Mechanisms in Lakekeeper
Lakekeeper provides several complementary mechanisms for protecting data assets and managing their deletion while balancing flexibility and data governance.

### Protection
Protection prevents accidental deletion of important entities in Lakekeeper. When an entity is protected, attempts to delete it through standard API calls will be rejected.

Protection can be applied to Warehouses, Namespaces, Tables, and Views via the Management API.

### Recursive Deletion on Namespaces
By default, Lakekeeper enforces that namespaces must be empty before deletion. Recursive deletion provides a way to delete a namespace and all its contained entities in a single operation.

When deleting a namespace, add the recursive=true query parameter to the request.

Protected entities within the hierarchy will prevent recursive deletion unless force is also used.

### Force Deletion
Force deletion is an administrative override that allows deletion of protected entities and bypasses certain safety checks:

- Bypasses protection settings
- Overrides soft-deletion mechanisms for immediate hard deletion

Add the `force=true` query parameter to deletion requests:
```
DELETE /catalog/v1/{prefix}/namespaces/{namespace}?force=true
```

Force can be combined with recursive deletion (`recursive=true&force=true`) to delete an entire protected hierarchy. The `purgeRequested` flag for tables is still respected and determines if the physical data of the table should be removed. Purge defaults to true for tables managed by Lakekeeper.

## Upgrades & Migration
Lakekeeper relies on a persistent backend (Postgres) and an optional authorization system (OpenFGA). As Lakekeeper evolves, these systems may need schema or configuration updates to support new features and improvements. The `lakekeeper migrate` command initializes and updates both Postgres schemas (creating necessary tables and structures) and authorization models to ensure compatibility with your current Lakekeeper version.

**Migration is required before each Lakekeeper upgrade.** You must run the migration before starting the `lakekeeper serve` command to ensure all system components are properly updated and configured. Without running the migration first, the `lakekeeper serve` command will fail to start with the error: "Database is not up to date with binary, make sure to run the migrate command before starting the server." Migrations are designed to be resilient - you can safely skip intermediate versions and migrate directly to your target version. If the system is already up to date, the migration command will exit immediately without making any changes.

**All migrations run within a transaction,** ensuring that either the entire migration completes successfully or the database remains unchanged. This prevents partial migrations that could leave your system in an inconsistent state.

**Always create a backup of your Postgres database before running migrations.** While migrations are designed to be safe, having a backup ensures you can restore your system to a known good state if needed.

When using the Lakekeeper Helm Chart, migrations are handled automatically through a dedicated job during deployment.
